# strategy_sim

./: CMakeLists.txt  LICENSE  Makefile  README.md  init_robot.sh  package.xml  pyproject.toml  run_ruff.sh
launch/: launch_simulator.py
scripts/: ball.py  collision.py  draw_randomized_ball.py  enemy_robot.py  field.py  field_calc.py  game_state.py  input_handler.py  main.py  randomize.py  robot.py  setting.py  training_interface.py  utils.py
scripts/rl_training/: README.md  adopt_uv_source.py  adopt_uv_source.sh  pyproject.toml
scripts/rl_training/scripts/: check_env.py  play.py  rl_env.py  train.py
scripts/rl_training/skrl_train/: README.md  pyproject.toml  tensorboard.sh
scripts/rl_training/skrl_train/scripts/: conv_tensor.py  env_config.py  models.py  play.py  play_latest.sh  reward_log_wrapper.py  reward_utils.py  skrl_ppo_cfg.yaml  skrl_ppo_lstm_cfg.yaml  train.py  train_yaml.py
scripts/rl_training/skrl_train/test/: debug_env.py  debug_randomize.py
src/strategy_sim/: publisher_member_function.py  subscriber_member_function.py
src/strategy_sim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_publisher.py  test_subscriber.py
