<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>strategy_sim</name>
  <version>0.0.0</version>
  <description>This is strategy simulation package</description>
  <maintainer email="inoue.kunkun3104@gmail.com">satoshi inoue</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <exec_depend>booster_msgs</exec_depend>
  <exec_depend>booster_interface</exec_depend>
  <exec_depend>vision_interface</exec_depend>
  <exec_depend>localization_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
