[project]
name = "rl-training"
version = "0.0.0"
description = "Reinforcement Learning Training for Strategy Simulation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "stable-baselines3[extra]",
    "gymnasium",
    "configclass>=0.2.0",
    "numba>=0.62.1",
    "numpy>=1.21.0,<2.0",
    "pygame>=2.6.1",
    "pyqt6>=6.9.1",
    "ruff>=0.12.7",
    "scipy>=1.7.0",
]

# ↑ここにはstrategy_simのdependenciesも含めている。これはstrategy_simと分離したいから。
# あちらはsystem site packagesを使わなくてはいけないので共通化すると面倒。
